--- a/manifest.json
+++ b/manifest.json
@@ -22,12 +22,21 @@
                 "https://www.okcupid.com/*"
             ],
             "js": [
-                "scripts/api-interceptor.js",
-                "scripts/okcupid-content.js"
+                "scripts/api-interceptor.js"
             ],
             "run_at": "document_start",
             "all_frames": true,
             "world": "MAIN"
+        },
+        {
+            "matches": [
+                "https://www.okcupid.com/*"
+            ],
+            "js": [
+                "scripts/okcupid-content.js"
+            ],
+            "run_at": "document_start",
+            "all_frames": true
         }
     ]
 }
