--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Cupid Enhanced",
-    "version": "0.8.0",
+    "version": "0.9.0",
     "description": "Enhances the OkCupid platform for better usability and features.",
     "icons": {
         "16": "extension-icons/icon-16.png",
@@ -13,6 +13,16 @@
         "storage",
         "tabs"
     ],
+    "action": {
+        "default_popup": "popup/popup.html",
+        "default_icon": {
+            "16": "extension-icons/icon-16.png",
+            "32": "extension-icons/icon-32.png",
+            "48": "extension-icons/icon-48.png",
+            "128": "extension-icons/icon-128.png"
+        },
+        "default_title": "Cupid Enhanced Settings"
+    },
     "background": {
         "service_worker": "scripts/background.js"
     },
